
 o Update config.sub and config.guess #257
 
 o Adapt Charles Karney's CMake patches for smoother build #258

 o Define default PROJ_LIB location for CMake compilation #261

 o Fix Windows compilation on PJ_aitoff.c

 o Align CMake SOVERSION with autotools #263

 o Regenerate nad/epsg with GDAL r28536 to avoid precision loss in TOWGS84
   parameters, e.g. on Amersfoort / RD EPSG:4289 (#260)

4.9.0 Release Notes
-------------------

 o Implement CMake as an option for building PROJ.4

 o Implement new virtual file api (projFileAPI) so that all access to grid
   shift and init files can be hooked.

 o Replace geodesic implementation with one from Charles Karney and add a 
   supported public interface (geodesic.h).

 o Upgraded to EPSG 8.5.

 o Removed old (deprecated) Java bindings in favor of the new api introduced
   in 4.8.0.

 o Implement the calcofi (Cal Coop Ocean Fish Invest Lines/Stations) projection

 o Install projects.h again for applications that want access to internal
   structures and functions despite the inherent fragility.

 o Various bug fixes and cleanup.


4.8.0 Release Notes
-------------------

 o Added the Natural Earth projection.

 o Added HEALPIX, rHEALPIX and Icosahedral Snyder Equal Area projections.

 o nad2bin now produces "CTable2" format grid shift files by default which
   are platform independent.  

 o nad2nad removed, use cs2cs for datum shift operations. 

 o projects.h no longer installed as a public include file.  Please try to
   only use proj_api.h. 

 o Add pj_get_spheroid_defn() accessor.

 o Added an alternate version of pj_init() that takes a projCtx (execution
   context) structure to address multithreading issues with error management
   and to provide a support for application hookable error reporting and
   logging.

 o Upgrade to EPSG 7.9.  Some changes in ideal datum selection.

 o JNI bindings reworked, org.proj4.Projections deprecated in favor of 
   org.proj4.PJ. 

 o Added preliminary vertical datum support.
