@@ -11,14 +11,14 @@ option(BUILD_NAD2BIN "Build nad2bin (format conversion tool) " ON)
 if(NOT MSVC)
   if (NOT APPLE)
     # Use relative path so that package is relocatable
-    set(CMAKE_INSTALL_RPATH "\$ORIGIN/../lib")
+    set(CMAKE_INSTALL_RPATH "\$ORIGIN/../${LIBDIR}")
   else ()
-    set (CMAKE_INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib")
+    set (CMAKE_INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/${LIBDIR}")
     # TO DO: cmake 2.8.12 introduces a way to make the install tree
     # relocatable with OSX via
     # (1) set(CMAKE_MACOSX_RPATH ON) and
     # (2) setting the INSTALL_RPATH property on the executables to
-    # "@loader_path/../lib"
+    # "@loader_path/../${LIBDIR}"
   endif ()
 endif ()
 
