@@ -264,17 +264,20 @@ add_library( ${PROJ_CORE_TARGET}
 if(WIN32)
   set_target_properties(${PROJ_CORE_TARGET}
     PROPERTIES
+    VERSION "${${PROJECT_INTERN_NAME}_BUILD_VERSION}"
     OUTPUT_NAME "${PROJ_CORE_TARGET_OUTPUT_NAME}"
     CLEAN_DIRECT_OUTPUT 1)
 elseif(BUILD_FRAMEWORKS_AND_BUNDLE)
   set_target_properties(${PROJ_CORE_TARGET}
     PROPERTIES
+    VERSION "${${PROJECT_INTERN_NAME}_BUILD_VERSION}"
     INSTALL_NAME_DIR ${PROJ_INSTALL_NAME_DIR}
     CLEAN_DIRECT_OUTPUT 1)
 else()
   set_target_properties(${PROJ_CORE_TARGET}
     PROPERTIES
-    SOVERSION "${${PROJECT_INTERN_NAME}_SOVERSION}"
+    VERSION "${${PROJECT_INTERN_NAME}_BUILD_VERSION}"
+    SOVERSION "${${PROJECT_INTERN_NAME}_API_VERSION}"
     CLEAN_DIRECT_OUTPUT 1)
 endif()
 
@@ -288,7 +291,9 @@ set_target_properties(${PROJ_CORE_TARGET}
 set(PROJ_LIBRARIES ${PROJ_CORE_TARGET} )
 if(UNIX AND BUILD_LIBPROJ_SHARED)
     find_library(M_LIB m)
-    TARGET_LINK_LIBRARIES(${PROJ_CORE_TARGET} ${M_LIB})
+    if(M_LIB)
+      TARGET_LINK_LIBRARIES(${PROJ_CORE_TARGET} -lm)
+    endif()
 endif(UNIX AND BUILD_LIBPROJ_SHARED)
 if(USE_THREAD AND Threads_FOUND AND CMAKE_USE_PTHREADS_INIT AND BUILD_LIBPROJ_SHARED)
    TARGET_LINK_LIBRARIES(${PROJ_CORE_TARGET} ${CMAKE_THREAD_LIBS_INIT})
@@ -299,6 +304,7 @@ endif(USE_THREAD AND Threads_FOUND AND CMAKE_USE_PTHREADS_INIT AND BUILD_LIBPROJ
 # install
 ##############################################
 install(TARGETS ${PROJ_CORE_TARGET}
+        EXPORT targets
         RUNTIME DESTINATION ${BINDIR}
         LIBRARY DESTINATION ${LIBDIR}
         ARCHIVE DESTINATION ${LIBDIR}
